apps/coflow/base/coflow-frontend/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: coflow
  labels:
    app: coflow
spec:
  replicas: 1
  selector:
    matchLabels:
      app: coflow
  template:
    metadata:
      labels:
        app: coflow
    spec:
      imagePullSecrets:
      - name: ghcr-secret
      containers:
      - name: backend
        image: ghcr.io/jorgevizu4/backend:main-fea7bf0
        ports:
        - containerPort: 8081
        resources:
          requests:
            memory: "128Mi"
            cpu: "100m"
          limits:
            memory: "256Mi"
            cpu: "500m"
      - name: frontend
        image: ghcr.io/jorgevizu4/frontend-web:main-fea7bf0
        ports:
        - containerPort: 80
        resources:
          requests:
            memory: "64Mi"
            cpu: "50m"
          limits:
            memory: "128Mi"
            cpu: "200m"
